--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
 
 	<header>
 		<div class="logo">
-			<img src="img/green park.jpg" widht="950" height="350" alt="IMATURH">
+			<<figure>
+				<img src="img/green park.jpg" widht="950" height="350" alt="IMATURH">
+			</figure>
+			
 		</div>
 		<div class="titular">
 			<h1 class="titulo">
