Aplicando diseño al nav y footer de la página

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
 	<header>
 		<div class="logo">
-			<<figure>
-				<img src="img/green park.jpg" widht="950" height="350" alt="IMATURH">
+			<figure>
+				<img src="img/green park.jpg" alt="IMATURH">
 			</figure>
 			
 		</div>
@@ -61,13 +61,10 @@
 
 	<section></section>
 
-	<footer>
-		<h3>
-			<strong>Framym Maradiaga</strong>
-			<span class="mejor">
-				Fotografía digital profesional IMATURH
-			</span>
-		</h3>
+	<footer>		
+		<p><strong>Framym Maradiaga</strong></p>
+		<p>Fotografía digital profesional</p>
+		
 	</footer>
 	
 </body>
