Agregando elementos al section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,13 @@
 		</ul>
 	</nav>
 
-	<section></section>
+	<section>
+		<div class="imagen">
+			<figure>
+			<img src="img/logo_unah.png" alt="Minions">	
+			</figure>
+		</div>
+	</section>
 
 	<footer>		
 		<p><strong>Framym Maradiaga</strong></p>
